--- a/bq-project/src/app/home-chef/home-chef.component.html
+++ b/bq-project/src/app/home-chef/home-chef.component.html
@@ -1,3 +1,4 @@
+<!-- Navbar------------------------------------------- -->
 <section class="home-section">
   <header>
     <nav class="navbar navbar-expand-lg navbar-light" style="margin: 0">
@@ -41,7 +42,6 @@
     </nav>
   </header>
   <!-- NavSIDE -->
-
   <div
     class="offcanvas offcanvas-start"
     data-bs-scroll="true"
@@ -82,6 +82,45 @@
       style="border-radius: 25px; height: 480px">
       <div class="row" style="justify-content: space-evenly; margin: 0">
         <div class="col-12 col-sm-12" style="justify-content: center">
+          <!------------------------- Botones de búsqueda---------------------------- -->
+          <div
+            class="btn-group"
+            role="group"
+            aria-label="Basic mixed styles example">
+            <button
+              type="button"
+              value="none"
+              class="btn btn-success active"
+              #btnnone
+              (click)="optionClick(btnnone.value)">
+              Categoría
+            </button>
+            <button
+              type="button"
+              value="pendiente"
+              class="btn btn-danger"
+              #btnpendiente
+              (click)="optionClick(btnpendiente.value)">
+              Pendiente
+            </button>
+            <button
+              type="button"
+              value="preparado"
+              class="btn btn-warning"
+              #btnpreparada
+              (click)="optionClick(btnpreparada.value)">
+              Preparado
+            </button>
+            <button
+              type="button"
+              value="entregado"
+              class="btn btn-info"
+              #btnentregado
+              (click)="optionClick(btnentregado.value)">
+              Entregado
+            </button>
+          </div>
+          <!-- ------------------------------------------------------------------------ -->
           <div>
             <div
               class="overflow-auto row p-1 mb-md-0 mr-md-3 scroller-container"
@@ -94,7 +133,7 @@
                   border-radius: 20px;
                   box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.2);
                 "
-                *ngFor="let order of listOrders">
+                *ngFor="let order of listOrders | filterOrder: optionStatus">
                 <!--   <select
                   class="form-select"
                   style="width: 100%; border-radius: 10px; margin: 1.5%"
@@ -123,37 +162,44 @@
                     {{ order.client }}
                   </h5>
                   <p class="data_entry" style="margin: 0">
-                    <strong>Date: </strong>{{ order.dataEntry | date: 'short' }}
+                    <strong>Date: </strong>{{ order.dataEntry }}
                   </p>
                   <div
-                    class="products-sales scroller-container"
-                    *ngFor="let product of order.products">
+                    class="overflow-auto row p-1 mb-md-0 mr-md-3"
+                    style="justify-content: space-evenly; max-height: 150px">
                     <div
-                      class="p-1 m-1"
-                      style="display: flex; flex-direction: row">
-                      <img
-                        src="{{ product.product.image }}"
-                        style="height: 2rem; width: 2rem" />
+                      class="products-sales"
+                      *ngFor="let product of order.products">
                       <div
-                        class=""
-                        style="display: flex; flex-direction: column">
-                        <h5 class="card-title">{{ product.product.name }}</h5>
+                        class="p-1 m-1"
+                        style="display: flex; flex-direction: row">
+                        <img
+                          src="{{ product.product.image }}"
+                          style="height: 2rem; width: 2rem" />
                         <div
-                          class="card-info"
-                          style="display: flex; justify-content: space-between">
-                          <div class="card-text" style="font-size: 0.8em">
-                            {{ product.product.price | currency: 'USD' }}
-                          </div>
-                          <div class="card-text" style="font-size: 0.8em">
-                            {{ product.qty }}
-                          </div>
-                          <div class="card-text" style="font-size: 0.8em">
-                            {{ product.total | currency: 'USD' }}
+                          class=""
+                          style="display: flex; flex-direction: column">
+                          <h5 class="card-title">{{ product.product.name }}</h5>
+                          <div
+                            class="card-info"
+                            style="
+                              display: flex;
+                              justify-content: space-between;
+                            ">
+                            <div class="card-text" style="font-size: 0.8em">
+                              {{ product.product.price | currency: 'USD' }}
+                            </div>
+                            <div class="card-text" style="font-size: 0.8em">
+                              {{ product.qty }}
+                            </div>
+                            <div class="card-text" style="font-size: 0.8em">
+                              {{ product.total | currency: 'USD' }}
+                            </div>
                           </div>
                         </div>
                       </div>
+                      <hr />
                     </div>
-                    <hr />
                   </div>
                   <span class="form-label">Total: </span>
                   <span> {{ order.total | currency: 'USD' }} </span>
