--- a/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-list/home-menu-list.component.html
@@ -64,7 +64,7 @@
         <strong> Price: </strong>{{ product.product.price | currency: 'USD' }}
       </p>
       <p class="data_entry" style="margin: 0">
-        <strong>Date: </strong>{{ product.product.dateEntry | date: 'short' }}
+        <strong>Date: </strong>{{ product.product.dateEntry }}
       </p>
       <div class="btn-icons p-1 m-2">
         <button
