--- a/bq-project/src/app/login/login.component.scss
+++ b/bq-project/src/app/login/login.component.scss
@@ -6,7 +6,9 @@
     width: 100%;
     height: 100vh;
 }
-
+.logo-responsive{
+    display: none;
+}
 .title {
     font-size: 2em;
     color: #FD090C;
@@ -43,4 +45,25 @@
 .form-label {
     color: #822719;
     font-family: 'Poppins', sans-serif;
+}
+
+@media (max-width: 768px) {
+    .login-form-1{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .logo-responsive{
+        display: block;
+        width: 20em;
+        margin: 3em 2em 0 2em;
+    }
+    .container-img{
+        display: none !important;
+    }
+    .card{
+        margin-top: 3em!important;
+        
+    }
 }
