--- a/bq-project/src/app/home/home.component.html
+++ b/bq-project/src/app/home/home.component.html
@@ -22,26 +22,11 @@
           aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse"
-          id="navbarSupportedContent"
-          style="gap: 6%">
-          <form class="d-flex" style="width: 70%; padding-left: 8%">
-            <input
-              class="form-control me-2 bg-light"
-              style="height: 40px"
-              type="text"
-              placeholder="Buscar"
-              aria-label="Search"
-              #txtSearch
-              (keyup)="searchInput(txtSearch.value)" />
-          </form>
-        </div>
+        <button class="btn btn-primary" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasRight" aria-controls="offcanvasRight">Toggle right offcanvas</button>
       </div>
     </nav>
   </header>
   <!-- NavSIDE -->
-
   <div
     class="offcanvas offcanvas-start"
     data-bs-scroll="true"
@@ -75,6 +60,17 @@
       </div>
     </div>
   </div>
+  <!-- comida -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasRight" aria-labelledby="offcanvasRightLabel">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title" id="offcanvasRightLabel">Offcanvas right</h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+    </div>
+    <div class="offcanvas-body">
+      <app-home-menu-form></app-home-menu-form>
+    </div>
+  </div>
+  
   <!-- componentes renderizados de user -->
   <div class="row" style="justify-content: space-evenly; margin: 0">
     <div class="col-12 col-sm-12" style="justify-content: center">
