--- a/bq-project/src/app/home-chef/home-chef.component.scss
+++ b/bq-project/src/app/home-chef/home-chef.component.scss
@@ -1,24 +1,30 @@
-.home-section{
+mat-sidenav-container {
+    height: 100%;
     background-image: url('../../assets/fondo.png');
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 100%;
-    height: 100vh;
+    mat-sidenav {
+        background-color:#FFC501;
+        mat-nav-list {
+          .menu-item {
+            margin-left: 8px;
+          }
+          .chevron-button {
+            transition: 300ms ease-in-out;
+            transform: rotate(0deg);
+            align-items: center;
+          }
+          .chevron-button.rotated {
+            transform: rotate(180deg);
+          }
+          .btn-log-out {
+            margin-top:30em;
+          }
+        }
+      }
 }
 
-/* .navbar{
-    background: rgba(235, 231, 37, 0.288);
-} */
-
-.dashboard-container{
-    background: #FFF6A6;
-    border-radius: 25px;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-}
 .container-card-body{
     display: flex;
     flex-direction: column;
