--- a/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
+++ b/bq-project/src/app/home/home-menu/home-menu-form/home-menu-form.component.html
@@ -13,7 +13,7 @@
       </div>
       <div class="form-group">
         <label class="form-label"> Fecha de pedido: </label>
-        <p class="form-control">{{ dataOrder }}</p>
+        <p class="form-control">{{ dataOrder | date: 'short' }}</p>
       </div>
       <label class="form-label"> Productos: </label>
       <div
