--- a/bq-project/src/app/admin/admin-product/admin-products-list/admin-products-list.component.html
+++ b/bq-project/src/app/admin/admin-product/admin-products-list/admin-products-list.component.html
@@ -46,7 +46,7 @@
         <strong> Price: </strong>{{ product.price | currency: 'USD' }}
       </p>
       <p class="data_entry" style="margin: 0">
-        <strong>Date: </strong>{{ product.dateEntry }}
+        <strong>Date: </strong>{{ product.dateEntry | date: 'short' }}
       </p>
       <div class="btn-icons p-1 m-1">
         <a
