--- a/bq-project/src/app/admin/admin-user/admin-user.component.html
+++ b/bq-project/src/app/admin/admin-user/admin-user.component.html
@@ -1,10 +1,8 @@
-<div class="row" style="justify-content: space-evenly">
-  <div
-    class="col-10 col-sm-7 bg-light"
-    style="border-radius: 25px; height: 480px">
+<div class="row m-2" style="justify-content: space-evenly">
+  <div class="col-list col-sm-7 col-md-8 bg-light">
     <app-admin-user-list></app-admin-user-list>
   </div>
-  <div class="col-10 col-sm-4">
+  <div class="col-form col-sm-4 col-md-3">
     <app-admin-user-form></app-admin-user-form>
   </div>
 </div>
