--- a/bq-project/src/app/admin/admin.component.html
+++ b/bq-project/src/app/admin/admin.component.html
@@ -40,7 +40,7 @@
             aria-controls="navbarSupportedContent"
             aria-expanded="false"
             aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
+            <i class="fa fa-search"></i>
           </button>
           <div
             class="collapse navbar-collapse cont-collapse"
@@ -55,14 +55,7 @@
                 (keyup)="searchInput(txtSearch.value)" />
             </form>
           </div>
-          <div
-            class="card p-2"
-            style="
-              text-align: center;
-              right: 4em;
-              width: 20em;
-              border-radius: 1em;
-            ">
+          <div class="card p-2">
             <div class="card-body m-0 p-0">
               <span
                 class="badge bg-danger"
@@ -77,10 +70,6 @@
         </div>
       </nav>
     </header>
-    <div class="row">
-      <div class="rowPrincipal col-12 col-sm-12">
-        <router-outlet></router-outlet>
-      </div>
-    </div>
+    <router-outlet></router-outlet>
   </mat-sidenav-content>
 </mat-sidenav-container>
