--- a/bq-project/src/app/admin/admin-user/admin-user-form/admin-user-form.component.scss
+++ b/bq-project/src/app/admin/admin-user/admin-user-form/admin-user-form.component.scss
@@ -4,7 +4,7 @@
 
 .title {
     font-size: 1.5em;
-    color: #FD090C;
+    color: #E65F00;
     font-family: 'Poppins', sans-serif;
 }
 
@@ -23,5 +23,20 @@
     font-size: 0.8em;
     color: #822719;
 }
+.btnSubmit{
+    color: #ffffff;
+    border-radius: 10em;
+    border: none;
+    height: 2em;
+    width: 90%;
+    font-weight: bold;
+}
+#validationEmail, #validationPassword{
+font-size: 0.8em;
+}
 
-
+@media (max-width: 575px) {
+    .card{
+        display: none;
+}
+}
